# nixos-dotfiles

./: AGENTS.md  flake.nix  result
homes/tyler/: home.nix
homes/tyler/configurations/home-manager/: default.nix
homes/tyler/configurations/nvim/: default.nix
homes/tyler/configurations/zsh/: default.nix
homes/x86_64-linux/tyler@nixos-2/: default.nix
modules/home/nvim/: default.nix
modules/home/tyler/nvf/: default.nix  settings.nix
modules/home/tyler/nvim/: default.nix
modules/home/tyler/opencode/: default.nix
modules/home/tyler/zsh/: default.nix
modules/home/zsh/: default.nix
modules/nixos/services/jellyfin/: default.nix
modules/nixos/services/prowlarr/: default.nix
modules/nixos/services/qbittorrent/: default.nix
modules/nixos/services/radarr/: default.nix
shells/etf-watchdog-api/: default.nix  pyproject.toml
shells/jekyll/: default.nix  gemset.nix
shells/jekyll/myblog/: .prettierrc  README.md  _config.yml  gemset.nix
shells/jekyll/myblog/_data/: repositories.yml
shells/jekyll/myblog/_pages/: about.md  cv.md  repositories.md
shells/jekyll/myblog/_posts/: 2024-08-11-Jekyll-Website.md  2024-09-15-Grafana-Dashboard.md  2024-11-03-Dockerizing-Django.md  2024-11-27-Markdown-Converter.md  2025-01-18-CI-CD-Pipeline.md  2025-01-26-Azure-App-Service-PostgreSQL.md  2025-02-26-Automating-Shutdown-Webapp.md  2025-05-11-Landing-Zone-Accelerator.md  2025-08-05-AI-Chatbot.md
simple-website/: about.html  index.html  style.css
systems/nixos-2/: configuration.nix
systems/x86_64-linux/nixos-2/: default.nix  hardware-configuration.nix
(+23 files in other folders)
