[project]
name = "etf-watchdog"
version = "0.1.0"
description = "Personal ETF tracker"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.0",
    "alpaca-py>=0.42.1",
    "bcrypt==3.2.2",
    "fastapi[standard]>=0.116.1",
    "passlib[bcrypt]==1.7.4",
    "pydantic[email]>=2.11.7",
    "pyjwt[crypto]>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.25",
]
[tool.basedpyright]
typeCheckingMode = "basic"
